Test all combinations of create-aws-lambda cli command
And test them all when compiled natively.